@@ -1,25 +1,17 @@
 require File.dirname(__FILE__) + '/../../../spec_helper.rb'
 
-context "target.should eql(expected)" do
+context "eql(expected)" do
+  
   specify "should pass if target.eql?(expected)" do
-    1.should eql(1)
+    matcher = eql(1)
+    matcher.matches?(1).should be_true
+    matcher.negative_failure_message.should == ["expected 1 not to equal 1 (using .eql?)", 1, 1]
   end
   
   specify "should fail if !target.eql?(expected)" do
-    lambda {
-      1.should eql("1")
-    }.should_fail_with "expected 1 to equal \"1\" (using .eql?)"
-  end
-end
-  
-context "target.should_not eql(expected)" do
-  specify "should pass if !target.eql?(expected)" do
-    1.should_not eql("1")
+    matcher = eql("1")
+    matcher.matches?(1).should be_false
+    matcher.failure_message.should == ["expected \"1\", got 1 (using .eql?)", "1", 1]
   end
   
-  specify "should fail if target.eql?(expected)" do
-    lambda {
-      1.should_not eql(1)
-    }.should_fail_with "expected 1 not to equal 1 (using .eql?)"
-  end
 end
