@@ -1,7 +1,5 @@
 integration spec'ing (derived from ActionController::IntegrationTest)
 resolve inconsistencies in running script/rails_spec
-should render
-match regexps on should render :text => 
 - right now if you fire up script/rails_spec_server and
   run 'script/rails_spec spec/helpers' twice, the first
   time they pass, the second they fail with this:
